Version 1.7.5 preparations