@@ -12,14 +12,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
+        <java.version>18</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <mainClass>com.kodedu.boot.AppStarter</mainClass>
-        <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j9.0.2</install4j.home>
+        <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j9.0.7</install4j.home>
         <install4j.licenseKey>${env.LICENSE_KEY_9}</install4j.licenseKey>
         <openjfx.version>18.0.1</openjfx.version>
-        <ikonli.version>12.2.0</ikonli.version>
+        <ikonli.version>12.3.1</ikonli.version>
         <jaxb.version>2.3.2</jaxb.version>
         <jacoco.version>0.8.7</jacoco.version>
         <logunit.version>1.1.0</logunit.version>
@@ -154,13 +154,13 @@
         <dependency>
             <groupId>com.install4j</groupId>
             <artifactId>install4j-runtime</artifactId>
-            <version>9.0.5</version>
+            <version>9.0.7</version>
             <!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-speller</artifactId>
-            <version>2.1.7</version>
+            <version>2.1.9</version>
             <exclusions>
                 <exclusion>
                     <artifactId>morfologik-polish</artifactId>
@@ -215,7 +215,7 @@
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j-charset</artifactId>
-            <version>67.1</version>
+            <version>71.1</version>
         </dependency>
         
         <dependency>
@@ -325,21 +325,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.10</version>
+                <version>2.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -362,7 +360,13 @@
                         -Xms128M
                         -Xmx756M
                         -Djava.awt.headless=false
-                        --illegal-access=permit
+                        -Xshareclasses:name=asciidocfx-175-0,nonfatal
+                        -Dsun.java2d.metal=true
+                        -Dorg.apache.xml.dtm.DTMManager=org.apache.xml.dtm.ref.DTMManagerDefault
+                        --add-opens
+                        java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens
+                        java.base/java.io=ALL-UNNAMED
                         --add-exports
                         javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
                         --add-exports
@@ -431,7 +435,6 @@
                         javafx.base/com.sun.javafx.property=ALL-UNNAMED
                         --add-exports
                         javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
-                        --module-path jmods
                         --add-modules=ALL-MODULE-PATH
                         --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
                     </extraJvmArguments>
@@ -454,7 +457,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
                 <executions>
                     <execution>
                         <id>createDistJar</id>
@@ -477,7 +479,7 @@
             <plugin>
                 <groupId>com.install4j</groupId>
                 <artifactId>install4j-maven</artifactId>
-                <version>9.0.5</version>
+                <version>9.0.7</version>
                 <executions>
                     <execution>
                         <id>compile-installers</id>
@@ -495,8 +497,8 @@
             </plugin>
                <!-- Test reporting -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
